[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/Boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Boss/BossStateMachine.gd" type="Script" id=2]
[ext_resource path="res://Assets/Boss/Boss-Sheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 12.5 )

[sub_resource type="Animation" id=20]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true, true ]
}

[sub_resource type="Animation" id=17]
resource_name = "Idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3 ]
}

[sub_resource type="Animation" id=22]
resource_name = "Jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=27]
resource_name = "JumpFall"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 19, 20 ]
}

[sub_resource type="Animation" id=26]
resource_name = "JumpMid"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 17, 18 ]
}

[sub_resource type="Animation" id=19]
resource_name = "Move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=21]
resource_name = "Shoot"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13 ]
}

[sub_resource type="Animation" id=28]
resource_name = "transit"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=23]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.984314, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 5.75, 3.5 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 17, 4.5 )

[node name="Boss" type="KinematicBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="BossStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
z_index = 10
texture = ExtResource( 3 )
hframes = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 20 )
anims/Idle = SubResource( 17 )
anims/Jump = SubResource( 22 )
anims/JumpFall = SubResource( 27 )
anims/JumpMid = SubResource( 26 )
anims/Move = SubResource( 19 )
anims/RESET = SubResource( 18 )
anims/Shoot = SubResource( 21 )
anims/transit = SubResource( 28 )

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="DetectTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WallTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( -11, -14.5 )

[node name="ShootPosition2" type="Position2D" parent="."]
position = Vector2( -11, -12.5 )

[node name="ShootPosition3" type="Position2D" parent="."]
position = Vector2( -11, -10.5 )

[node name="Collide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Collide"]
polygon = PoolVector2Array( -3, -25, 3, -25, 5, -23, 5, -19, 9, -15, 9, -10, 3, -10, -3, -10, -9, -10, -9, -15, -5, -19, -5, -23 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -24, -10.5 )
shape = SubResource( 16 )
disabled = true

[node name="FallArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallArea"]
position = Vector2( 0, -5.5 )
shape = SubResource( 25 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DetectTimer" to="." method="_on_DetectTimer_timeout"]
[connection signal="timeout" from="WallTimer" to="." method="_on_WallTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="body_entered" from="Collide" to="." method="_on_Collide_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="FallArea" to="." method="_on_FallArea_body_entered"]
